--- a/dynamoDbApiTest.html
+++ b/dynamoDbApiTest.html
@@ -4,7 +4,7 @@
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.18.min.js"></script>
     <script id="facebook-jssdk" src="https://connect.facebook.net/en_US/all.js"></script>
     <meta charset="UTF-8">
-    <title>getTest</title>
+    <title>AWS CRUD Test</title>
 </head>
 <body>
     <div id="fb-root"></div>
