--- a/dynamoDbApiTest.html
+++ b/dynamoDbApiTest.html
@@ -9,14 +9,39 @@
 <body>
     <div id="fb-root"></div>
 		<button id="login">Login</button>
-    <h3>AwsCrud Test I/O</h3>
-    Key Value: <input id="keyValue" type="text" /><br />
-    Attribute: <input id="attributeText" type="text" /><br />
-    Value: <input id="valueText" type="text" /><br />
-    <button id="putThis">Put!</button> | <button id="getThis">Get!</button> | <button id="updateThis">Update!</button> | <button id="deleteThis">Delete!</button>
+    <h1><u>AwsCrud Test</u></h1>
+    <br />
+    <br />
+    <h3>:Put:</h3>
+    Key: <input id="putKey" type="text" /><br />
+    Value: <input id="putVal" type="text" />
+    <button id="putThis">Put!</button>
+    <br />
+    <br />
+    <h3>:Get:</h3>
+    Key: <input id="getKey" type="text" /><br />
+    Attribute: <input id="getAtt" type="text" />
+    <button id="getThis">Get!</button>
+    <br />
+    <br />
+    <h3>:Update:</h3>
+    Key: <input id="upKey" type="text" /><br />
+    Attribute: <input id="upAtt" type="text" /><br />
+    Value: <input id="upVal" type="text" />
+    <button id="updateThis">Update!</button>
+    <br />
+    <br />
+    <h3>:Query:</h3>
+    Attribute: <input id="qAtt" type="text" /><br />
+    Value: <input id="qVal" type="text" />
+    <button id="queryThis">Query!</button>
+    <br />
+    <br />
+    <h3>:Delete:</h3>
+    Key: <input id="delKet" type="text" />
+    <button id="deleteThis">Delete!</button>
 
-
-    <script type="text/javascript">
+<script type="text/javascript">
         var fbUserId;
         var params;
         var keyText;
@@ -31,37 +56,32 @@
 document.getElementById('putThis').onclick = function () {
     dynamodb = new AWS.DynamoDB({ region: 'us-west-2' });
     docClient = new AWS.DynamoDB.DocumentClient({ service: dynamodb });
-    keyText = document.getElementById("keyValue").value;
-    attText = document.getElementById("attributeText").value;
-    valText = document.getElementById("valueText").value;
+    keyText = document.getElementById("putKey").value;
+    valText = document.getElementById("putVal").value;
     console.log("Key Value: ", keyText);
-    console.log("Attribute: ", attText);
     console.log("Value: ", valText);
     params = {
         TableName: 'awsCrudTest',
         Item: {
             itemId: keyText,
-            attribute1: valText
+            Occupation: valText
         }
     };
-    docClient.put(params, function(err, data){
+    docClient.put(params, function (err, data) {
         if (err) console.log(err);
-        else
-        {
+        else {
             resultData = data;
             console.log(resultData);
 
         }
-    })
-
-
+    });
 };
 
 document.getElementById('getThis').onclick = function () {
     dynamodb = new AWS.DynamoDB({ region: 'us-west-2' });
     docClient = new AWS.DynamoDB.DocumentClient({ service: dynamodb });
-    keyText = document.getElementById("keyValue").value;
-    attText = document.getElementById("attributeText").value;
+    keyText = document.getElementById("getKey").value;
+    attText = document.getElementById("getAtt").value;
     console.log("Key Value: ", keyText);
     console.log("Attribute: ", attText);
     params = {
@@ -83,9 +103,9 @@ document.getElementById('getThis').onclick = function () {
 document.getElementById('updateThis').onclick = function () {
     dynamodb = new AWS.DynamoDB({ region: 'us-west-2' });
     docClient = new AWS.DynamoDB.DocumentClient({ service: dynamodb });
-    keyText = document.getElementById("keyValue").value;
-    attText = document.getElementById("attributeText").value;
-    valText = document.getElementById("valueText").value;
+    keyText = document.getElementById("upKey").value;
+    attText = document.getElementById("upAtt").value;
+    valText = document.getElementById("upVal").value;
     console.log("Key Value: ", keyText);
     console.log("Attribute: ", attText);
     console.log("Value: ", valText);
@@ -112,7 +132,7 @@ document.getElementById('updateThis').onclick = function () {
 document.getElementById('deleteThis').onclick = function () {
     dynamodb = new AWS.DynamoDB({ region: 'us-west-2' });
     docClient = new AWS.DynamoDB.DocumentClient({ service: dynamodb });
-    keyText = document.getElementById("keyValue").value;
+    keyText = document.getElementById("delKey").value;
     console.log("Key Value: ", keyText);
     params = {
         TableName: 'awsCrudTest',
@@ -123,6 +143,27 @@ document.getElementById('deleteThis').onclick = function () {
     docClient.delete(params, function(err, data){
     if(err) console.log(err);
     else console.log(data);
+    });
+};
+
+document.getElementById('queryThis').onclick = function () {
+    dynamodb = new AWS.DynamoDB({ region: 'us-west-2' });
+    docClient = new AWS.DynamoDB.DocumentClient({ service: dynamodb });
+    attText = document.getElementById("qAtt").value;
+    valText = document.getElementById("qVal").value;
+    console.log("Attribute: ", attText);
+    console.log("Value: ", valText);
+    params = {
+        TableName: 'awsCrudTest',
+        ExpressionAttributeValues: {
+            '#a': attText,
+            ':v': valText
+        },
+        KeyConditionExpression: "#a > :v"
+    };
+    docClient.query(params, function(err, data){
+        if(err) console.log(err);
+        else console.log(data);
     });
 };
 
@@ -153,6 +194,7 @@ window.fbAsyncInit = function () {
             }(document, 'script', 'facebook-jssdk'));
         })
     }
-}</script>
+};
+</script>
 </body>
 </html>
